--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,17 @@ DATABASE_URL=
 
 # --- Session & Security ---
 
-# A long, random string used to sign the session ID cookie.
+# This secret is used to sign JWT tokens for authentication.
+# REQUIREMENTS:
+# - MUST be set in production (server will fail to start without it)
+# - MUST be at least 32 characters long
+# - MUST be random and unpredictable
+# - NEVER commit this to version control
+# - NEVER share this value
+# Generate one with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=
+
+# A long, random string used to sign SESSION_SECRET cookie (fallback for JWT if JWT_SECRET not set).
 # For production, use a strong, randomly generated string.
 SESSION_SECRET="generate_a_long_random_string_here_for_production"
 
