--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "durak",
-  "version": "3.0.0-alpha.12",
+  "version": "3.0.0-alpha.13",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
     "glicko2": "^1.2.1",
+    "helmet": "^8.1.0",
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
